Fixes dark mode

--- a/final/colors-hub/src/App.css
+++ b/final/colors-hub/src/App.css
@@ -11,6 +11,9 @@
 .dark {
   background: #242424;
 }
+.dark .no-content{
+  color: #ffffff;
+}
 .dark .pagination{
   color: #ffffff;
 }
